# automotive-log-analyzer

./: LICENSE
parser/: CMakeLists.txt
parser/src/: main.cpp
